--- a/index.html
+++ b/index.html
@@ -32,13 +32,34 @@
         <!-- Hero Section -->
         <section class="hero__container">
             <div class="hero__image__container">
-                <img  class="hero__image" src="./zomato resource/hero.jpg" alt="hero__image">
+                <img class="hero__image" src="./zomato resource/hero.jpg" alt="hero__image">
             </div>
             <div class="hero__desciption">
-                <h1 class="hero__text">Order from your favourite restaurants near you.</h1>
-            <button class="button__primary"> Order now</button>
-            
+                <h1 class="hero__text"><b> Order from your favourite restaurants near you.</b></h1>
+                <button class="button__primary"> Order now</button>
+
             </div>
+        </section>
+
+        <!-- Explore the Main -->
+        <section class="explore__menu__container">
+            <h1 class="explore__menu__text"> Explore our Menu</h1>
+            <div class="explore__menu__lists"></div>
+            <div class="food__menu__card"></div>
+            <img src="./zomato resource/burger.jpg" alt="burger" class="food__image">
+            <div class="food__menu__card__description"></div>
+            <h3 class="food__title"></h3>
+            <p class="food__restaurants">
+
+            </p>
+
+
+
+
+
+
+
+
         </section>
     </main>
 </body>
