--- a/index.html
+++ b/index.html
@@ -40,26 +40,50 @@
 
             </div>
         </section>
-
         <!-- Explore the Main -->
         <section class="explore__menu__container">
             <h1 class="explore__menu__text"> Explore our Menu</h1>
-            <div class="explore__menu__lists"></div>
-            <div class="food__menu__card"></div>
-            <img src="./zomato resource/burger.jpg" alt="burger" class="food__image">
-            <div class="food__menu__card__description"></div>
-            <h3 class="food__title"></h3>
-            <p class="food__restaurants">
+            <div class="explore__menu__lists">
 
-            </p>
-
-
-
-
-
-
+                <!-- BURGRE -->
+                <div class="food__menu__card">
+                    <img src="./zomato resource/burger.jpg" alt="burger" class="food__image">
+                    <div class="food__menu__card__description">
+                        <h3 class="food__title"> Burger </h3>
+                        <p class="food__restaurants">Burger King, Mcdonalds, Burger Place
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
 
 
+                <!-- Pizza -->
+                <div class="food__menu__card">
+                    <img src="./zomato resource/pizza.jpg" alt="pizza" class="food__image">
+                    <div class="food__menu__card__description">
+                        <h3 class="food__title"> Pizza </h3>
+                        <p class="food__restaurants">Burger King, Mcdonalds, Burger Place
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
+
+
+                <!-- Ice  cream -->
+                <div class="food__menu__card">
+                    <img src="./zomato resource/iceCream.jpg" alt="iceCream" class="food__image">
+                    <div class="food__menu__card__description">
+                        <h3 class="food__title"> IceCream </h3>
+                        <p class="food__restaurants">Burger King, Mcdonalds, Burger Place
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="explore__menu__view__more">
+                <button class="button__primary"> View More</button>
+            </div>
         </section>
     </main>
 </body>
