--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <!-- Explore the Main -->
         <section class="explore__menu__container">
             <h1 class="explore__menu__text"> Explore our Menu</h1>
+             <div class="explore__menu__gradient__bg"></div>
             <div class="explore__menu__lists">
 
                 <!-- BURGRE -->
@@ -58,7 +59,7 @@
 
 
                 <!-- Pizza -->
-                <div class="food__menu__card">
+                <div class="food__menu__card" id="pizza__card">
                     <img src="./zomato resource/pizza.jpg" alt="pizza" class="food__image">
                     <div class="food__menu__card__description">
                         <h3 class="food__title"> Pizza </h3>
