--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Explore the Main -->
         <section class="explore__menu__container">
             <h1 class="explore__menu__text"> Explore our Menu</h1>
-             <div class="explore__menu__gradient__bg"></div>
+            <div class="explore__menu__gradient__bg"></div>
             <div class="explore__menu__lists">
 
                 <!-- BURGRE -->
@@ -86,7 +86,34 @@
                 <button class="button__primary"> View More</button>
             </div>
         </section>
-    </main>
+
+        <!-- Restaurants -->
+        <section class="restaurants__container">
+        <h1 class="restaurants__description"> Order From 100's of Restaurants</h1>
+        <div class="restaurants__flex">
+            <div class="restaurants__flex__row__one">
+                <div class="restaurant__1">
+                    <img class="restaurant__1__image" src="./zomato resource/restaurant1.jpg" alt="restaurant__1">
+                </div>
+ 
+                <div class="restaurant__2">
+                    <img class="restaurant__2__image" src="./zomato resource/restaurant2.jpg" alt="restaurant__2">
+                </div>
+            </div>
+
+            <div class="restaurants__flex__row__two">
+                <div class="restaurant__3">
+                    <img class="restaurant__3__image" src="./zomato resource/restaurant3.jpg" alt="restaurant__3">
+                </div>
+
+
+                <div class="restaurant__4">
+                    <img class="restaurant__4__image" src="./zomato resource/restaurant4.jpg" alt="restaurant__4">
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 
 </html>
