--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
 
             </div>
         </section>
+
+        <section class="video__footage__container">
+            <div class="video__footage">
+                <iframe src="https://player.vimeo.com/video/323795266" frameborder="0"
+                    allow="autoplay, fullscreen; picture-in-picture" allowfullscreen class="chef_video"></iframe>
+            </div>
+            <div class="video__footage__text">
+                <p>
+                    Your food will be prepared safely with an experienced chef, without compromising on the quality and
+                    hygiene.
+                </p>
+            </div>
+        </section>
+
         <!-- Explore the Main -->
         <section class="explore__menu__container">
             <h1 class="explore__menu__text"> Explore our Menu</h1>
@@ -89,31 +103,62 @@
 
         <!-- Restaurants -->
         <section class="restaurants__container">
-        <h1 class="restaurants__description"> Order From 100's of Restaurants</h1>
-        <div class="restaurants__flex">
-            <div class="restaurants__flex__row__one">
-                <div class="restaurant__1">
-                    <img class="restaurant__1__image" src="./zomato resource/restaurant1.jpg" alt="restaurant__1">
+            <h1 class="restaurants__description"> Order From 100's of Restaurants</h1>
+            <div class="restaurants__flex">
+                <div class="restaurants__flex__row__one">
+                    <div class="restaurant__1">
+                        <img class="restaurant__1__image" src="./zomato resource/restaurant1.jpg" alt="restaurant__1">
+                    </div>
+
+                    <div class="restaurant__2">
+                        <img class="restaurant__2__image" src="./zomato resource/restaurant2.jpg" alt="restaurant__2">
+                    </div>
                 </div>
- 
-                <div class="restaurant__2">
-                    <img class="restaurant__2__image" src="./zomato resource/restaurant2.jpg" alt="restaurant__2">
+
+                <div class="restaurants__flex__row__two">
+                    <div class="restaurant__3">
+                        <img class="restaurant__3__image" src="./zomato resource/restaurant3.jpg" alt="restaurant__3">
+                    </div>
+
+
+                    <div class="restaurant__4">
+                        <img class="restaurant__4__image" src="./zomato resource/restaurant4.jpg" alt="restaurant__4">
+                    </div>
                 </div>
             </div>
-
-            <div class="restaurants__flex__row__two">
-                <div class="restaurant__3">
-                    <img class="restaurant__3__image" src="./zomato resource/restaurant3.jpg" alt="restaurant__3">
-                </div>
-
-
-                <div class="restaurant__4">
-                    <img class="restaurant__4__image" src="./zomato resource/restaurant4.jpg" alt="restaurant__4">
+        </section>
+        <!-- email  -->
+        <section class="email__subcribe__container">
+            <div>
+                <h1 class="email__text">Stay Updated</h1>
+                <div class="email__subcribe__input__field">
+                    <div>
+                        <input type="email" placeholder="email@email.com" class="email__input" />
+                    </div>
+                    <button class="button__primary">Get Updates</button>
                 </div>
             </div>
-        </div>
-    </section>
-</main>
+        </section>
+
+        <!-- quote section-->
+        <section class="quote__container">
+            <div class="quote_image_overlay"></div>
+            <h3 class="quote_image_text">
+                When a man's stomach is full it makes no difference whether he is rich
+                or poor.
+            </h3>
+        </section>
+    </main>
+    <footer>
+        <img src="./zomato resource/logo.png" alt="logo" />
+        <ul>
+          <li>Pricing</li>
+          <li>Terms and condition</li>
+          <li>Partnership</li>
+          <li>Career</li>
+          <li>Contact</li>
+        </ul>
+      </footer>
 </body>
 
 </html>
