--- a/index.html
+++ b/index.html
@@ -1,204 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zomato - Largest Food Delivery network</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather:300,300italic,regular,italic,700,700italic,900,900italic"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar">
-        <div class="navbar__brand">
-          <img src="./zomato resource/logo.png" alt="logo" class="brand__logo" />
-        </div>
-        <div class="navbar__nav__items">
-          <div class="nav__item">
-            <button class="button__primary hide__mobile">Order Food</button>
-            <button
-              class="button__primary hamburger__menu mobile__only"
-              id="hamburgermenu"
-            >
-              <div></div>
-              <div></div>
-              <div></div>
-            </button>
-          </div>
-        </div>
-      </nav>
-      <div class="mobile__navbar__items mobile__only hamburger__menu__close">
-        <ul>
-          <li class="nav__item">Products</li>
-          <li class="nav__item">Restaurants</li>
-          <li class="nav__item">Pricing</li>
-          <li class="nav__item">About Us</li>
-        </ul>
 
-        <div class="nav__item">
-          <button class="button__primary">Order Food</button>
-        </div>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zomato-frontend project </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+</head>
+
+<body>
+    <!-- Navbar-->
+    <header>
+        <nav class="navbar">
+            <div class="navbar__brand">
+                <img src="./zomato resource/logo.png" alt="logo" class="navbar__logo">
+            </div>
+            <div class="navbar__nav__items">
+                <button class="nav__item button__primary">More</button>
+
+            </div>
+        </nav>
     </header>
     <main class="container">
-      <section class="hero__container">
-        <div class="hero__image__container">
-          <img src="./zomato resource/hero.jpg" alt="hero image" class="hero__image" />
-          <img
-            src="./assets/svg/heroShape.svg"
-            alt="hero image shape"
-            class="hero__image__shape"
-          />
-          <img
-            src="./assets/svg/herobgpattren.svg"
-            alt="hero image shape"
-            class="hero__image__pattren"
-          />
-        </div>
-        <div class="hero__description">
-          <h1 class="hero__text">
-            Order food from favourite restaurants near you.
-          </h1>
-          <button class="button__primary">Order Now</button>
-        </div>
-      </section>
-
-      <section class="video__footage__container">
-        <div class="video__footage">
-          <iframe
-            src="https://player.vimeo.com/video/323795266"
-            frameborder="0"
-            allow="autoplay; fullscreen; picture-in-picture"
-            allowfullscreen
-            class="chef__video"
-          ></iframe>
-        </div>
-        <div class="video__footage__text">
-          <p>
-            Your food will be prepared safely with an experienced chef, without
-            compromising on the quality and hygiene.
-          </p>
-        </div>
-      </section>
-
-      <section class="food__list__container">
-        <h1 class="text-xl">Explore our menu</h1>
-        <div class="food__list__container__diagonal"></div>
-
-        <div class="food__menu__card__list">
-          <div class="food__menu__card">
-            <img
-              src="./zomato resource/burger.jpg"
-              alt="burger"
-              class="food__menu__card__image"
-            />
-            <div class="food__menu__card__details">
-              <h4 class="text-lg"><strong>Burgers</strong></h4>
-              <p>
-                Burger King, Mcdonalds, Burger Place
-                <span style="color: red">+3</span>
-              </p>
+        <!-- Hero Section -->
+        <section class="hero__container">
+            <div class="hero__image__container">
+                <img class="hero__image" src="./zomato resource/hero.jpg" alt="hero__image">
             </div>
-          </div>
-          <div class="food__menu__card food__menu__card__move__up">
-            <img
-              src="./zomato resource/pizza.jpg"
-              alt="pizza"
-              class="food__menu__card__image"
-            />
-            <div class="food__menu__card__details">
-              <h4 class="text-lg"><strong>Pizza</strong></h4>
-              <p>
-                Pizza Hut, Domino's Pizza
-                <span style="color: red">+3</span>
-              </p>
+            <div class="hero__desciption">
+                <h1 class="hero__text"><b> Order from your favourite restaurants near you.</b></h1>
+                <button class="button__primary"> Order now</button>
+
             </div>
-          </div>
-          <div class="food__menu__card">
-            <img
-              src="./zomato resource/iceCream.jpg"
-              alt="iceCream"
-              class="food__menu__card__image"
-            />
-            <div class="food__menu__card__details">
-              <h4 class="text-lg"><strong>Ice Creams</strong></h4>
-              <p>
-                Baskin Robins, Ibaco
-                <span style="color: red">+3</span>
-              </p>
+        </section>
+
+        <section class="video__footage__container">
+            <div class="video__footage">
+                <iframe src="https://player.vimeo.com/video/323795266" frameborder="0"
+                    allow="autoplay, fullscreen; picture-in-picture" allowfullscreen class="chef_video"></iframe>
             </div>
-          </div>
-        </div>
-        <div class="food__list__view__more">View More</div>
-      </section>
-      <section class="restaurant__list__container">
-        <div class="restaurant__list__text">
-          <h4 class="text-xl">Order From 100s of restaurants</h4>
-        </div>
-        <div class="restaurant__list__images__container">
-          <div class="restaurant__list__row_1">
+            <div class="video__footage__text">
+                <p>
+                   <b> Your food will be prepared safely with an experienced chef, without compromising on the quality and
+                    hygiene.</b>
+                </p>
+            </div>
+        </section>
+
+        <!-- Explore the Main -->
+        <section class="explore__menu__container">
+            <h1 class="explore__menu__text"> Explore our Menu</h1>
+            <div class="explore__menu__gradient__bg"></div>
+            <div class="explore__menu__lists">
+
+                <!-- BURGRE -->
+                <div class="food__menu__card">
+                    <img src="./zomato resource/burger.jpg" alt="burger" class="food__image">
+                    <div class="food__menu__card__description">
+                        <h3 class="food__title"> Burger </h3>
+                        <p class="food__restaurants">Burger King, Mcdonalds, Burger Place
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
+
+
+                <!-- Pizza -->
+                <div class="food__menu__card" id="pizza__card">
+                    <img src="./zomato resource/pizza.jpg" alt="pizza" class="food__image">
+                    <div class="food__menu__card__description">
+                        <h3 class="food__title"> Pizza </h3>
+                        <p class="food__restaurants">Burger King, Mcdonalds, Burger Place
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
+
+
+                <!-- Ice  cream -->
+                <div class="food__menu__card">
+                    <img src="./zomato resource/iceCream.jpg" alt="iceCream" class="food__image">
+                    <div class="food__menu__card__description">
+                        <h3 class="food__title"> IceCream </h3>
+                        <p class="food__restaurants">Burger King, Mcdonalds, Burger Place
+                            <span style="color: red;">+3</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="explore__menu__view__more">
+                <button class="button__primary"> View More</button>
+            </div>
+        </section>
+
+        <!-- Restaurants -->
+        <section class="restaurants__container">
+            <h1 class="restaurants__description"> Order From 100's of Restaurants</h1>
+            <div class="restaurants__flex">
+                <div class="restaurants__flex__row__one">
+                    <div class="restaurant__1">
+                        <img class="restaurant__1__image" src="./zomato resource/restaurant1.jpg" alt="restaurant__1">
+                    </div>
+
+                    <div class="restaurant__2">
+                        <img class="restaurant__2__image" src="./zomato resource/restaurant2.jpg" alt="restaurant__2">
+                    </div>
+                </div>
+
+                <div class="restaurants__flex__row__two">
+                    <div class="restaurant__3">
+                        <img class="restaurant__3__image" src="./zomato resource/restaurant3.jpg" alt="restaurant__3">
+                    </div>
+
+
+                    <div class="restaurant__4">
+                        <img class="restaurant__4__image" src="./zomato resource/restaurant4.jpg" alt="restaurant__4">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- email  -->
+        <section class="email__subcribe__container">
             <div>
-              <img
-                src="./zomato resource/restaurant1.jpg"
-                alt="restaurant1"
-                class="restaurant1"
-              />
+                <h1 class="email__text">Stay Updated</h1>
+                <div class="email__subcribe__input__field">
+                    <div>
+                        <input type="email" placeholder="email@email.com" class="email__input" />
+                    </div>
+                    <button class="button__primary">Get Updates</button>
+                </div>
             </div>
-            <img
-              src="./zomato resource/restaurant2.jpg"
-              alt="restaurant2"
-              class="restaurant2"
-            />
-          </div>
-          <div class="restaurant__list__row_2">
-            <img
-              src="./zomato resource/restaurant3.jpg"
-              alt="restaurant3"
-              class="restaurant3"
-            />
-            <img
-              src="./zomato resource/restaurant4.jpg"
-              alt="restaurant4"
-              class="restaurant4"
-            />
-          </div>
-        </div>
-      </section>
-      <section class="email__subcribe__container">
-        <div>
-          <h1 class="text-xl">Stay Updated</h1>
-          <div class="email__subcribe__input__field">
-            <div>
-              <input
-                type="email"
-                placeholder="email@email.com"
-                class="email__input"
-              />
-            </div>
-            <button class="button__primary">Get Updates</button>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="quote__container">
-        <div class="quote_image_overlay"></div>
-        <h3 class="quote_image_text">
-          When a man's stomach is full it makes no difference whether he is rich
-          or poor.
-        </h3>
-      </section>
+        <!-- quote section-->
+        <section class="quote__container">
+            <div class="quote_image_overlay"></div>
+            <h3 class="quote_image_text">
+                When a man's stomach is full it makes no difference whether he is rich
+                or poor.
+            </h3>
+        </section>
     </main>
     <footer>
-      <img src="./zomato resource/logo.png alt="logo" />
-      <ul>
-        <li>Pricing</li>
-        <li>Terms and condition</li>
-        <li>Partnership</li>
-        <li>Career</li>
-        <li>Contact</li>
-      </ul>
-    </footer>
+        <img src="./zomato resource/logo.png" alt="logo" />
+        <ul>
+          <li>Pricing</li>
+          <li>Terms and condition</li>
+          <li>Partnership</li>
+          <li>Career</li>
+          <li>Contact</li>
+        </ul>
+      </footer>
+</body>
+
+</html>
